--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "npm run build --workspace=client",
     "start": "npm run start --workspace=server",
+    "dev:client": "npm run dev --workspace=client",
     "dev:server": "npm run build && npm run dev --workspace=server"
   },
   "keywords": [],
