--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "07-restserver",
-  "version": "1.0.0",
+  "name": "restserver-neochat",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
